--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,8 +13,11 @@ jobs:
           node-version: 20
           cache: 'npm'
 
+      - name: Generate Lock File
+        run: npm install --package-lock-only
+
       - name: Install Dependencies
-        run: npm ci
+        run: npm ci --no-audit
 
       - name: Run Unit Tests
         run: npx hardhat test
