--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,11 +13,10 @@ jobs:
           node-version: 20
           cache: 'npm'
 
-      - name: Generate Lock File
-        run: npm install --package-lock-only
-
       - name: Install Dependencies
-        run: npm ci --no-audit
+        run: |
+          npm ci --no-audit --ignore-scripts
+          npm audit fix --dry-run
 
       - name: Run Unit Tests
         run: npx hardhat test
