[fix] Now audit does not block job from finishing

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,9 +14,10 @@ jobs:
           cache: 'npm'
 
       - name: Install Dependencies
-        run: |
-          npm ci --no-audit --ignore-scripts
-          npm audit fix --dry-run
+        run: npm ci --no-audit --ignore-scripts
+
+      - name: Audit (non-blocking)
+        run: npm audit || true
 
       - name: Run Unit Tests
         run: npx hardhat test
