--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^3.0.0",
+    "@nomicfoundation/hardhat-ethers": "^3.0.0",
+    "@typechain/ethers-v6": "^0.4.0",
+    "@typechain/hardhat": "^8.0.0",
     "chai": "^4.3.7",
     "hardhat": "^2.19.0",
-    "solidity-coverage": "^0.8.4"
+    "solidity-coverage": "^0.8.4",
+    "typechain": "^8.3.0"
   }
 }
