--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,6 +13,9 @@ jobs:
           node-version: 20
           cache: 'npm'
 
+      - name: Remove node_modules and artifacts
+        run: rm -rf node_modules artifacts cache && npm ci
+
       - name: Install Dependencies
         run: npm ci --no-audit --ignore-scripts
 
